{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 24,
  "lineage": "92e6ecc9-1c73-e116-c9a4-61036efa9525",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:network-acl/acl-0fe32284e4b32e92d",
            "default_network_acl_id": "acl-0fe32284e4b32e92d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fe32284e4b32e92d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "650251703560",
            "subnet_ids": [
              "subnet-00c3255fa2e858f2c",
              "subnet-07361bd64d0627fc4",
              "subnet-0aae9d7153b390333",
              "subnet-0d9168eea15a818b7"
            ],
            "tags": {
              "Name": "type-node-app-vpc-v4-default"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-default"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:route-table/rtb-0e39056621c10e0bb",
            "default_route_table_id": "rtb-0e39056621c10e0bb",
            "id": "rtb-0e39056621c10e0bb",
            "owner_id": "650251703560",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "type-node-app-vpc-v4-default"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:security-group/sg-01a9d8cd71f49b02d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01a9d8cd71f49b02d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "650251703560",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "type-node-app-vpc-v4-default"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-default"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea2316a8287581d5",
            "arn": "arn:aws:ec2:us-east-1:650251703560:elastic-ip/eipalloc-0ea2316a8287581d5",
            "domain": "vpc",
            "id": "eipalloc-0ea2316a8287581d5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-167-90-81.compute-1.amazonaws.com",
            "public_ip": "54.167.90.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "type-node-app-vpc-v4-us-east-1a"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ba6cca8c0d4683e",
            "arn": "arn:aws:ec2:us-east-1:650251703560:elastic-ip/eipalloc-03ba6cca8c0d4683e",
            "domain": "vpc",
            "id": "eipalloc-03ba6cca8c0d4683e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-101-222.compute-1.amazonaws.com",
            "public_ip": "3.234.101.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "type-node-app-vpc-v4-us-east-1b"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:internet-gateway/igw-001422c3a03449178",
            "id": "igw-001422c3a03449178",
            "owner_id": "650251703560",
            "tags": {
              "Name": "type-node-app-vpc-v4"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea2316a8287581d5",
            "association_id": "eipassoc-08eeeb7dfec31070b",
            "connectivity_type": "public",
            "id": "nat-08011c58f11d55c84",
            "network_interface_id": "eni-0c8cd3c9976cd09c5",
            "private_ip": "10.0.1.241",
            "public_ip": "54.167.90.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c3255fa2e858f2c",
            "tags": {
              "Name": "type-node-app-vpc-v4-us-east-1a"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ba6cca8c0d4683e",
            "association_id": "eipassoc-0492e67410356406e",
            "connectivity_type": "public",
            "id": "nat-0634122408cd0872e",
            "network_interface_id": "eni-09bb3701745648763",
            "private_ip": "10.0.2.23",
            "public_ip": "3.234.101.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aae9d7153b390333",
            "tags": {
              "Name": "type-node-app-vpc-v4-us-east-1b"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03befbc7d51c50d571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08011c58f11d55c84",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03befbc7d51c50d57",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e533a547c0805ddf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0634122408cd0872e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e533a547c0805ddf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001422c3a03449178",
            "id": "r-rtb-0f2c4b61fe58a856e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2c4b61fe58a856e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:route-table/rtb-03befbc7d51c50d57",
            "id": "rtb-03befbc7d51c50d57",
            "owner_id": "650251703560",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "type-node-app-vpc-v4-private-us-east-1a"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:route-table/rtb-0e533a547c0805ddf",
            "id": "rtb-0e533a547c0805ddf",
            "owner_id": "650251703560",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "type-node-app-vpc-v4-private-us-east-1b"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:route-table/rtb-0f2c4b61fe58a856e",
            "id": "rtb-0f2c4b61fe58a856e",
            "owner_id": "650251703560",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "type-node-app-vpc-v4-public"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05585da48a02e4564",
            "route_table_id": "rtb-03befbc7d51c50d57",
            "subnet_id": "subnet-0d9168eea15a818b7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043472621e0d5e5e4",
            "route_table_id": "rtb-0e533a547c0805ddf",
            "subnet_id": "subnet-07361bd64d0627fc4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbae953e1644c81c",
            "route_table_id": "rtb-0f2c4b61fe58a856e",
            "subnet_id": "subnet-00c3255fa2e858f2c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5eaa89aee6eb064",
            "route_table_id": "rtb-0f2c4b61fe58a856e",
            "subnet_id": "subnet-0aae9d7153b390333"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:subnet/subnet-0d9168eea15a818b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9168eea15a818b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650251703560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "type-node-app-vpc-v4-private-us-east-1a",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-private-us-east-1a",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:subnet/subnet-07361bd64d0627fc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07361bd64d0627fc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650251703560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "type-node-app-vpc-v4-private-us-east-1b",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-private-us-east-1b",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:subnet/subnet-00c3255fa2e858f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c3255fa2e858f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650251703560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "type-node-app-vpc-v4-public-us-east-1a",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-public-us-east-1a",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:subnet/subnet-0aae9d7153b390333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aae9d7153b390333",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650251703560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "type-node-app-vpc-v4-public-us-east-1b",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4-public-us-east-1b",
              "kubernetes.io/cluster/type-node-app-eks-v1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c2c47b84a1beaf83"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251703560:vpc/vpc-0c2c47b84a1beaf83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe32284e4b32e92d",
            "default_route_table_id": "rtb-0e39056621c10e0bb",
            "default_security_group_id": "sg-01a9d8cd71f49b02d",
            "dhcp_options_id": "dopt-009ea84662caefe2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2c47b84a1beaf83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e39056621c10e0bb",
            "owner_id": "650251703560",
            "tags": {
              "Name": "type-node-app-vpc-v4"
            },
            "tags_all": {
              "Name": "type-node-app-vpc-v4"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}